--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,10 @@ code {
   background: rgba(0, 240, 210, 0.4);
 }
 
+.line.selected.highlight:after {
+  background: rgba(0, 240, 210, 0.6);
+}
+
 .lineNumber {
   color: #aaa;
   margin-right: 16px;
@@ -77,7 +81,7 @@ code {
   position: relative;
 }
 
-div.highlight:after {
+.fragment.highlight:after {
   content: " ";
   position: absolute;
   width: calc(100% + 8px);
@@ -88,8 +92,44 @@ div.highlight:after {
   background: rgba(0, 170, 255, 0.4);
 }
 
-div.scope {
+.fragment.scope {
   color: #00dffc;
+}
+
+.fragment.def {
+  color: #fe4365;
+}
+
+.fragment.const {
+  color: #ccc;
+}
+
+.fragment.parent {
+  color: #fc9d9a;
+}
+
+.fragment.assign {
+  color: #cfa4f5;
+}
+
+.fragment.compare {
+  color: #5aedba;
+}
+
+.fragment.assignAction {
+  color: #f77825;
+}
+
+.fragment.comparator {
+  color: #f9cdad;
+}
+
+.fragment.os {
+  color: #fc9d9a;
+}
+
+.fragment.jump {
+  color: #fae571;
 }
 
 .empty.highlight {
