--- a/src/index.css
+++ b/src/index.css
@@ -31,15 +31,43 @@ code {
   display: flex;
 }
 
-.code {
+.left {
   flex-grow: 1;
+  background: #222;
+  border-top: 4px solid rgba(255, 255, 255, 0.1);
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background: #272727;
+}
+
+.code {
   height: 100%;
   padding: 16px;
-  background: #222;
+  flex-shrink: 1;
   color: #fff;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.macroOuter {
+  border-top: 4px solid rgba(255, 255, 255, 0.1);
+}
+
+.macroTitle {
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  text-align: left;
+  padding: 4px 12px;
+}
+
+.hasFocus {
+  border-top: 4px solid #f77825;
 }
 
 .bottom {
