--- a/src/index.css
+++ b/src/index.css
@@ -234,7 +234,7 @@ button {
 .indent:after {
   content: " ";
   position: absolute;
-  right: 12px;
+  left: 3px;
   top: -2px;
   width: 2px;
   /* top: -15px; */
@@ -243,7 +243,14 @@ button {
 }
 
 .indent.compare:after {
-  border-right: 2px solid #308054;
+  width: 12px;
+  height: 50%;
+  top: 2px;
+  left: 8px;
+  border: none;
+  border-bottom: 2px solid #308054;
+  border-left: 2px solid #308054;
+  border-bottom-left-radius: 2px;
 }
 
 .fragment.highlight:after {
