--- a/src/components/inline_dropdown.css
+++ b/src/components/inline_dropdown.css
@@ -20,6 +20,11 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  display: none;
+}
+
+.visible {
+  display: flex;
 }
 
 .dropdownItem {
